--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,7 +1,7 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=/Users/huilee/flutter
 FLUTTER_APPLICATION_PATH=/Users/huilee/app_flutter/tmachine
-FLUTTER_TARGET=lib/main.dart
+FLUTTER_TARGET=/Users/huilee/app_flutter/tmachine/lib/main.dart
 FLUTTER_BUILD_DIR=build
 SYMROOT=${SOURCE_ROOT}/../build/ios
 FLUTTER_FRAMEWORK_DIR=/Users/huilee/flutter/bin/cache/artifacts/engine/ios
